<resources>
    <string name="app_name">Parcial1OswarNaalCanul</string>
    <string name="dame_numero_1">Dame Numero 1</string>
    <string name="dame_numero_2">Dame Numero 2</string>
    <string name="resultado">RESULTADO</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
</resources>